compiler/tests-spec/testData/psi/linked/constant-literals/boolean-literals/p-1/pos/2.8.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, boolean-literals -> paragraph 1 -> sentence 2
 * NUMBER: 8
 * DESCRIPTION: The use of Boolean literals as the identifier (with backtick) in the stringTemplateElement.
 * NOTE: this test data is generated by FeatureInteractionTestDataGenerator. DO NOT MODIFY CODE MANUALLY!
 */

fun f1() {
    val x1 = "$`true`"

    val x2 = "..." + "...$`false`..." + "..."

    var x3 = "$`true`$`false`$`true`"
}
